tests/ui/reborrow/custom_mut_coerce_shared.stderr
error[E0308]: mismatched types
  --> $DIR/custom_mut_coerce_shared.rs:23:12
   |
LL |     method(a);
   |     ------ ^ expected `CustomRef<'_, ()>`, found `CustomMut<'_, ()>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `CustomRef<'_, ()>`
              found struct `CustomMut<'_, ()>`
note: function defined here
  --> $DIR/custom_mut_coerce_shared.rs:19:4
   |
LL | fn method(a: CustomRef<'_, ()>) {}
   |    ^^^^^^ --------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
